# playwright-for-automation-exercise-web

./: .env.example  .gitignore  CLAUDE.md  SKILL.md  pyproject.toml
tests/: conftest.py  test_auth.py  test_cart.py  test_checkout.py  test_demo.py  test_forms.py  test_products.py  test_static_pages.py
tests/pages/: address_page.py  base_page.py  cart_page.py  confirm_page.py  contact_us_page.py  delete_account_page.py  home_page.py  login_signup_page.py  payment_page.py  product_detail_page.py  products_page.py  signup_detail_page.py  testcases_page.py
tests/pages/components/: footer.py  header.py  product_list.py
